fixed icons alignment

--- a/src/igz_controls/components/action-panel/action-panel.less
+++ b/src/igz_controls/components/action-panel/action-panel.less
@@ -3,7 +3,7 @@
     .action-icon-color-set();
 
     left: 0;
-    line-height: 1;
+    line-height: 0;
     position: relative;
     transition: @igz-basic-transition;
 
